--- a/html/actualités.html
+++ b/html/actualités.html
@@ -35,7 +35,8 @@
         </section>
         <section>
             <h2 class="ash2">Les opus les plus populaires</h2>
-            <div class="secondsection"><img src="../img/mw2-reveal.jpg" alt="MW2">
+            <div class="secondsection">
+                <img src="../img/mw2-reveal.jpg" alt="MW2">
                 <P>Version reboot de l'emblématique jeu de tir à la première personne sorti en 2009, Call of Duty Modern
                     Warfare 2 offre une expérience multi et solo ayant pour but de raviver la flamme de son illustre
                     prédécesseur. Le jeu bénéficie de nouveaux graphismes et d'une refonte complète. Il devrait être le
