--- a/html/zombie.html
+++ b/html/zombie.html
@@ -54,7 +54,7 @@
                     ville mais grâce à l'aide des Veilleurs (un clan de "pieuvres"), ils activent un laser pour enfermer
                     Apothicon dans la clé d'invocation. Un Veilleur donne alors la Clé d'Invocation à un des
                     protagonistes mais elle est volée par un homme appelé Richtofen...</p>
-                <h2 class="der">3 -Kino der totem</h2>
+                <h2 class="modern">3 -Kino der totem</h2>
                 <p>Le Hall est la salle de départ de Kino der Toten, c'est une assez grande salle qui contient un
                     téléporteur, un M14 et un Olympia qui coûte pour chacun, 500 points. Il y a également quatre
                     fenêtres barricadées et un emplacement pour la boite mystère. Le joueur a deux chemins à suivre et
